test/tests/errors/error-class-no-rec-func2.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        public rec func x(): int {
            1
        }
    }
}